16636
Would be handy to define packages in the REPL to quickly test semantics depending on packages like access modifiers. Now all you can do is create a file and test it with the compiler.

scala> package a {
<console>:1: error: illegal start of definition
       package a {
       ^

scala> package a
<console>:1: error: illegal start of definition
       package a
       ^
